Use re-frame & soda-ash for the front end.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.0/semantic.min.css"></link>
   </head>
   <body>
-    <h3><img width="48px" src="/img/logo.png"/>Google App Engine Clojure...</h3>
-    <div id=\"app\"></div>
+    <div id="app"></div>
     <script type="text/javascript" src="/js/app.js"></script>
+    <script>myapp.ui.core.init();</script>
   </body>
 </html>
